--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0; /* Remove a margem padrão do body */
-            padding: 0; /* Remove o preenchimento padrão do body */
-            height: 100vh; /* Faz o body ocupar toda a altura da viewport */
-            background-image: url(/img/Fundo.jpg);
-            background-size: cover; /* Cobre toda a área */
-            background-position: center; /* Centraliza a imagem */
-            background-repeat: no-repeat; /* Não repete a imagem */
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            background-image: url('img/Fundo.jpg'); /* Caminho corrigido */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             position: relative;
         }
 
@@ -46,51 +46,51 @@
 
         .whatsapp-link {
             display: inline-block;
-            background-color: #25D366; /* Cor do WhatsApp */
+            background-color: #25D366;
             color: white;
             padding: 10px 20px;
             border-radius: 5px;
             text-decoration: none;
             font-size: 18px;
-            transition: background-color 0.3s, transform 0.3s; /* Transições suaves */
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         .whatsapp-link:hover {
-            background-color: #128C7E; /* Cor do WhatsApp ao passar o mouse */
-            transform: scale(1.05); /* Efeito de crescimento ao passar o mouse */
+            background-color: #128C7E;
+            transform: scale(1.05);
         }
 
         .logo-container {
             display: flex;
-            justify-content: center; /* Centraliza horizontalmente */
-            align-items: center; /* Centraliza verticalmente */
-            margin-bottom: 20px; /* Espaço entre as logotipos e o restante do conteúdo */
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
             z-index: 1;
             position: relative;
         }
 
         .logo {
-            max-width: 700px; /* Ajuste o tamanho máximo conforme necessário */
+            max-width: 700px;
         }
 
         @media (max-width: 600px) {
             body {
-                margin: 0; /* Menos margem em telas pequenas */
+                margin: 0;
             }
 
             #countdown {
-                font-size: 36px; /* Tamanho do contador reduzido */
+                font-size: 36px;
             }
 
             .logo {
-                max-width: 500px; /* Tamanho das logotipos em telas pequenas */
+                max-width: 500px;
             }
         }
     </style>
 </head>
 <body>
     <div class="logo-container">
-        <img src="/img/logo.png" alt="Logo" class="logo">
+        <img src="img/logo.png" alt="Logo" class="logo"> <!-- Caminho corrigido -->
     </div>
     <h1>Proposta Válida por apenas 48 Horas!!</h1>
     <div id="countdown"></div>
@@ -99,14 +99,12 @@
         <a href="https://wa.me/5527996107474?text=Olá,%20quero%20aceitar%20a%20proposta!" class="whatsapp-link" target="_blank">Aceitar Proposta</a>
     </div>
     <script>
-        // Define a data de término (48 horas a partir de agora)
         const proposalDuration = 48 * 60 * 60 * 1000; // 48 horas em milissegundos
         const startDate = new Date(); // Data atual
         const endDate = new Date(startDate.getTime() + proposalDuration); // Data de término
 
         const countdownElement = document.getElementById('countdown');
 
-        // Função para atualizar o cronômetro
         function updateCountdown() {
             const now = new Date(); // Data e hora atual
             const timeRemaining = endDate - now; // Tempo restante
@@ -124,7 +122,6 @@
             countdownElement.innerHTML = `${hours}h ${minutes}m ${seconds}s`;
         }
 
-        // Atualiza o cronômetro a cada segundo
         const interval = setInterval(updateCountdown, 1000);
         updateCountdown(); // Chama uma vez para evitar atraso
     </script>
