--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="logo-container">
         <img src="img/logo.png" alt="Logo" class="logo">
     </div>
-    <h1>Proposta Válida por apenas 48 Horas!!</h1>
+    <h1>Proposta válida por apenas 48 Horas!!</h1>
     <div id="countdown"></div>
     <div id="contact">
         <p>Para aceitar a proposta, entre em contato via WhatsApp pelo botão abaixo:</p>
