add whatsapp button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronômetro de Proposta</title>
+    <!-- Inclui o Boxicons CDN -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,6 +62,13 @@
             transform: scale(1.05);
         }
 
+        /* Estilo do ícone do WhatsApp */
+        .whatsapp-link i {
+            margin-right: 8px; /* Espaçamento entre o ícone e o texto */
+            font-size: 38px; /* Tamanho do ícone */
+            vertical-align: middle;
+        }
+
         .logo-container {
             display: flex;
             justify-content: center;
@@ -96,7 +105,9 @@
     <div id="countdown"></div>
     <div id="contact">
         <p>Para aceitar a proposta, entre em contato via WhatsApp pelo botão abaixo:</p>
-        <a href="https://wa.me/5527996107474?text=Olá,%20quero%20aceitar%20a%20proposta!" class="whatsapp-link" target="_blank">Aceitar Proposta</a>
+        <a href="https://wa.me/5527996107474?text=Olá,%20quero%20aceitar%20a%20proposta!" class="whatsapp-link" target="_blank">
+            <i class='bx bxl-whatsapp'></i> Aceitar Proposta
+        </a>
     </div>
     <script>
         const proposalDuration = 48 * 60 * 60 * 1000; // 48 horas em milissegundos
